# Port-Service-Scanner-Mini-Nmap-Clone-

./: .gitignore  CNAME  LICENSE  README.md  gui.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
port_scanner/: __init__.py  gui.py  scanner.py  utils.py
tests/: test_utils.py
