[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "port_scanner"
version = "0.1.0"
description = "Mini Port & Service Scanner (Mini-Nmap Clone)"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
